ARM/nestedtemplates/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string"
        },           
        "vnet": {
            "type": "object"
        },      
        "nsg_app_name": {
            "type": "string"
        },
        "nsg_front_name": {
            "type": "string"
        },
        "tags": {
            "type": "object",
            "defaultValue": {}
        }
    },
    "resources": [      
        {
            "condition": "[equals(parameters('vnet').newOrExisting,'new')]",
            "name": "[parameters('vnet').name]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-09-01",
            "tags": "[parameters('tags')]",
            "location": "[parameters('location')]",

            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[parameters('vnet').addressPrefixes]"
                },
                "subnets": [
                    {
                        "name": "[parameters('vnet').subnets.subnet1.name]",
                        "properties": {
                            "addressPrefix": "[parameters('vnet').subnets.subnet1.addressPrefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_app_name'))]"
                            }
                        }
                    },
                    {
                       "name": "[parameters('vnet').subnets.subnet2.name]",
                        "properties": {
                            "addressPrefix": "[parameters('vnet').subnets.subnet2.addressPrefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsg_front_name'))]"
                            }
                        }
                    }
                ]
            },

            "dependsOn" : [
                "[parameters('nsg_app_name')]",
                "[parameters('nsg_front_name')]"
            ]
        },
        {
            "name": "[parameters('nsg_app_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "tags": "[parameters('tags')]",      
            "apiVersion": "2020-08-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "priority": 300,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    }                                
                ]
            }
        },
        {
            "name": "[parameters('nsg_front_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "tags": "[parameters('tags')]",      
            "apiVersion": "2020-08-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "Appgatewayskuv2",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "65200-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTPS_443",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    }            
                ]
            }
        }     
    ],   
    "outputs": {
        "vnet": {
            "type": "object",
            "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('vnet').name))]"
        }
    }
}
